# Exoticus

./: .env  .gitignore  CODE_OF_CONDUCT.md  README.md  SECURITY.md  __main__.py  bot.py  customemojis.py  database.ini  database_config.py  env.py  key-words.json  main.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Extensions/: bot-config.py  db.py  filter.py  functions.py  join.py  level.py  moderation.py  tickets.py
bot/: __init__.py  bot.py  cacheManager.py  config.py
bot/data/static/: build.sql  functions.py
bot/database/: cacheManager.py  databaseManager.py  db.py
bot/extensions/: error.py  filter.py  functions.py  join.py  level.py  moderation.py  sudo.py  sudo.py.old  tickets.py
src/DiscordBot/: bot.py  config.py  database.ini  database_config.py  env.py  pg_hba.conf
src/DiscordBot/Extensions/: db.py  filter.py  functions.py  join.py  level.py  tickets.py
